--- a/style.css
+++ b/style.css
@@ -21,3 +21,16 @@
 .font-black{
     color: black;
 }
+
+.column {
+    float: left;
+    width: 50%;
+    padding: 10px;
+    height: 300px; /* Should be removed. Only for demonstration */
+}
+
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
