--- a/style.css
+++ b/style.css
@@ -27,11 +27,20 @@
 }
 
 .btn-coral{
-    background-color: #e63946;
+    background-color: #034078;
     color: white;
+}
+
+.btn-ImperialRed{
+    background-color: #e63946;
+    color: #fff;
 }
 
 .font-black{
     color: black;
+}
+
+.btn-twitter{
+    background-color: #0ABAFF;
 }
 
