--- a/style.css
+++ b/style.css
@@ -57,4 +57,17 @@
 div.three {
     border-style: solid;
     border-color: #e63946;
+    border-radius: 0.5em;
+}
+
+.card-red{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #e63946;
+    background-clip: border-box;
+    border: 1px solid rgba(0,0,0,.125);
+    border-radius: .25rem;
 }
