--- a/style.css
+++ b/style.css
@@ -46,11 +46,11 @@
 }
 
 .bg-competiciones{
-    background-color: #FBDBDD;
+    background-color: #E57373;
 }
 
 .bg-disponibles{
-    background-color: #c2eeff;
+    background-color: #FFF8E1;
 }
 
 
